Add init-mod scripts and update wrapper to v4.2.9
Add init-mod and init-mod.cmd to set up mod command delegation to the
project-local wrapper and run CLI configuration in one step. Update modw
and modw.cmd to the latest v4.2.9 release from Maven Central. Simplify
the CI workflow to use the new init scripts.